# PPT-SVGAGENT

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  VERSION.md  v0.6_plan.md
backend/: .env.example  app.py  config.py  generate_thumbnails.py  pyproject.toml  svg_to_pptx.py
backend/controllers/: chat_controller.py  ppt_controller.py  settings_controller.py  template_custom_controller.py
backend/models/: page.py  project.py  settings.py
backend/ppt_master_engine/scripts/svg_to_pptx/: drawingml_converter.py
backend/ppt_master_engine/templates/layouts/: layouts_index.json
backend/services/: __init__.py  ai_generation_service.py  file_service.py  outline_generator.py  page_content_planner.py  ppt_parser.py  style_analyzer.py  svg_export_service.py  svg_render_service.py  task_manager.py  theme_analysis_service.py
backend/services/ai_providers/: __init__.py
backend/services/ai_providers/text/: __init__.py  anthropic_provider.py  base.py  genai_provider.py  lazyllm_provider.py  minimax_provider.py  openai_provider.py
backend/utils/: db_retry.py
frontend/: generate_thumbnails.cjs  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts
frontend/src/api/: client.ts  settingsApi.ts
frontend/src/components/home/: NewProjectModal.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/settings/: SettingsModal.tsx
frontend/src/pages/: HomePage.tsx  TemplateGalleryPage.tsx  WorkspacePage.tsx
frontend/src/store/: projectStore.ts
frontend/src/styles/: globals.css
(+6 files in other folders)
