[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.102.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-sqlalchemy>=3.1.1",
    "google-generativeai>=0.8.6",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
]
